# istaan

./: .gitignore  Cargo.toml  README.md
.zed/: tasks.json
data/: download-steam-depots.sh  download.sh
src/: depotdownloader_manifest.rs  main.rs  old_new.rs
src/diff/: cs.rs  mod.rs  unity.rs
