[package]
name = "istaan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
anstream = "0.6"
anstyle = "1.0"
clap = { version = "4.5", features = ["derive"] }
diffy = "0.4"
serde_json = "1.0"
rabex-env = { git = "https://github.com/jakobhellermann/rabex-env" }
rabex = { git = "https://github.com/jakobhellermann/RustyAssetBundleEXtractor", branch = "all" }
rayon = "1.11"
json_diff_ng = { version = "0.6", default-features = false }
regex = { version = "1.11.2", default-features = false, features = ["perf", "std"] }
serde_derive = "1.0.219"
serde = "1.0.219"
jiff = { version = "0.2.15", default-features = false, features = ["std"] }
tempfile = { version = "3.22.0", default-features = false }
walkdir = "2.5.0"
rustc-hash = "2.1.1"

[patch."https://github.com/jakobhellermann/rabex-env"]
rabex-env = { path = "/home/jakob/dev/unity/rabex-env" }

[patch."https://github.com/jakobhellermann/RustyAssetBundleEXtractor"]
rabex = { path = "/home/jakob/dev/unity/RustyAssetBundleEXtractor" }
